--- a/index2.html
+++ b/index2.html
@@ -223,7 +223,7 @@
     <script src="components/UGSfiles.js" defer></script>
     <script src="scripts/gloader.js" defer></script>
     <script src="scripts/search.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js" defer></script>
+    <script src="https://raw.githubusercontent.com/Destroyed12121/Staticsj/main/JS/scramjet.all.js" defer></script>
     <script type="module">
         import * as BareMux from "https://cdn.jsdelivr.net/npm/@mercuryworkshop/bare-mux/dist/index.mjs";
         window.BareMux = BareMux;
@@ -261,7 +261,8 @@
             </section>
 
             <!-- Online Counter -->
-            <div class="online-counter" style="margin-top: 24px; display: inline-flex; align-items: center; gap: 6px; font-size: 0.875rem; color: var(--text-muted);">
+            <div class="online-counter"
+                style="margin-top: 24px; display: inline-flex; align-items: center; gap: 6px; font-size: 0.875rem; color: var(--text-muted);">
                 <i class="fa-solid fa-user-group" style="color: #22c55e;"></i>
                 <span id="page-online-count">--</span>
                 <span>online</span>
