--- a/staticsjv2/embed.html
+++ b/staticsjv2/embed.html
@@ -131,11 +131,10 @@
             color: var(--text)
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js" defer></script>
+    <script src="https://raw.githubusercontent.com/Destroyed12121/Staticsj/main/JS/scramjet.all.js" defer></script>
     <script type="module">
         import * as BareMux from "https://cdn.jsdelivr.net/npm/@mercuryworkshop/bare-mux/dist/index.mjs";
         window.BareMux = BareMux;
-        // scriptsLoaded signal removed as we don't load script.js
         window.scriptsLoaded = Promise.resolve(); 
     </script>
 </head>
@@ -158,7 +157,6 @@
     </div>
     <div id="iframe-container"></div>
     <script>
-        // Get config from config.js (already loaded in head)
         const DEFAULT_WISP = window.SITE_CONFIG?.defaultWisp || "wss://glseries.net/wisp/";
         const WISP_SERVERS = window.SITE_CONFIG?.wispServers || [];
 
@@ -169,7 +167,6 @@
         function showError(type, details = '') { els.loading.style.display = 'none'; els.error.style.display = 'flex'; const err = ERRORS[type] || ERRORS.unknown; els.errorMessage.innerHTML = `<strong>${err.title}</strong><br><br>${err.message}<br><br><small style="color:var(--text-muted)">${err.hint}</small>${details ? `<br><br><code style="font-size:11px;background:var(--surface);padding:4px 8px;border-radius:4px">${details}</code>` : ''}` }
         function getErrorType(msg) { msg = (msg || '').toLowerCase(); if (msg.includes('fetch') || msg.includes('network')) return 'connectionFailed'; if (msg.includes('timeout')) return 'timeout'; if (msg.includes('blocked') || msg.includes('cors') || msg.includes('access')) return 'blocked'; if (msg.includes('websocket') || msg.includes('wisp')) return 'proxyError'; return 'unknown' }
 
-        // Initialize scramjet directly in embed.html
         let scramjetInstance = null;
         let connectionInstance = null;
 
@@ -182,9 +179,9 @@
             scramjetInstance = new ScramjetController({
                 prefix: basePath + "scramjet/",
                 files: {
-                    wasm: "https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.wasm.wasm",
-                    all: "https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.all.js",
-                    sync: "https://cdn.jsdelivr.net/gh/Destroyed12121/Staticsj@main/JS/scramjet.sync.js"
+                    wasm: "https://raw.githubusercontent.com/Destroyed12121/Staticsj/main/JS/scramjet.wasm.wasm",
+                    all: "https://raw.githubusercontent.com/Destroyed12121/Staticsj/main/JS/scramjet.all.js",
+                    sync: "https://raw.githubusercontent.com/Destroyed12121/Staticsj/main/JS/scramjet.sync.js"
                 }
             });
 
@@ -197,9 +194,16 @@
 
             const basePath = location.pathname.replace(/[^/]*$/, '') + '/';
             const wispUrl = localStorage.getItem("proxServer") || DEFAULT_WISP;
+            const storedSettings = JSON.parse(localStorage.getItem("void_settings") || "{}");
+            const transport = storedSettings.transport || "epoxy";
+
+            let transportUrl = "https://cdn.jsdelivr.net/npm/@mercuryworkshop/epoxy-transport@2.1.28/dist/index.mjs";
+            if (transport === "libcurl") {
+                transportUrl = "https://raw.githubusercontent.com/Destroyed12121/Staticsj/main/libcurl.mjs";
+            }
 
             connectionInstance = new BareMux.BareMuxConnection(basePath + "bareworker.js");
-            await connectionInstance.setTransport("https://cdn.jsdelivr.net/npm/@mercuryworkshop/epoxy-transport@2.1.28/dist/index.mjs", [{ wisp: wispUrl }]);
+            await connectionInstance.setTransport(transportUrl, [{ wisp: wispUrl }]);
             return connectionInstance;
         }
 
@@ -210,7 +214,6 @@
                     const registration = await navigator.serviceWorker.register(basePath + 'sw.js', { scope: basePath });
                     await navigator.serviceWorker.ready;
 
-                    // Send config to service worker
                     const wispUrl = localStorage.getItem("proxServer") || DEFAULT_WISP;
                     const allServers = [...WISP_SERVERS, ...JSON.parse(localStorage.getItem('customWisps') || '[]')];
                     const autoswitch = localStorage.getItem('wispAutoswitch') !== 'false';
@@ -245,7 +248,6 @@
         }
         els.retryBtn.onclick = () => location.reload();
 
-        // Wait for scripts to load before initializing
         async function start() {
             if (window.scriptsLoaded) {
                 await window.scriptsLoaded;
